Fix: News and Updates Text truncated. ref: https://dev.azure.com/AptFrontOffice/GQLS/_workitems/edit/399026/

--- a/src/App.css
+++ b/src/App.css
@@ -312,8 +312,8 @@
 /* News and Update */
 
 .newsUpdateContent {
-    height: 195px;
-    overflow: hidden
+    max-height: 200px;
+    overflow: auto
 }
 
 .MuiFormHelperText-root.Mui-error {
